[gd_scene load_steps=5 format=2]

[ext_resource path="res://tiles/enemigo.png" type="Texture" id=1]
[ext_resource path="res://scripts/enemigo.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 128.0

[sub_resource type="CircleShape2D" id=2]
radius = 8.0

[node name="Node2D" type="Node2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="AreaMusica" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaMusica"]
shape = SubResource( 1 )

[node name="AreaDamage" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaDamage"]
shape = SubResource( 2 )

[connection signal="area_entered" from="AreaMusica" to="." method="_on_AreaMusica_area_entered"]
[connection signal="area_exited" from="AreaMusica" to="." method="_on_AreaMusica_area_exited"]
[connection signal="area_entered" from="AreaDamage" to="." method="_on_AreaDamage_area_entered"]
